<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidShop</string>
    <string name="app_id">132785496918903</string>
    <string name="main">Main</string>
    <string name="tvTodayDeal">Today Deals</string>
    <string name="tvRecently">Recently Viewed</string>
    <string name="tvMost">Most Popular</string>
    <string name="tvCategory">Category</string>
    <string name="tvSearch">Search</string>
    <string name="etSearch">Enter here</string>
    <string name="admin_login">Login as admin</string>
    <string name="tvAdmin">Admin</string>
    <string name="btnClear">Clear</string>
    <string name="btnLogin">Login</string>
    <string name="tvLogin">Welcome to DroidShop</string>
    <string name="tvOr">Or</string>
    <string name="btnRegister">Register</string>
    <string name="com_facebook_loginview_log_in_button">Connect to Facebook</string>
    <string name="action_settings">Settings</string>
    <string name="tvRegistration">Registration</string>
    <string name="htUsername">Username</string>
    <string name="htPwd">Password</string>
    <string name="htCPwd">Confirm Password</string>
    <string name="htLName">Last Name</string>
    <string name="htFName">First Name</string>
    <string name="rbtnMale">Male</string>
    <string name="rbtnFemale">Female</string>
    <string name="btnDOB">Date Of Birth</string>
    <string name="htTele">Telephone</string>
    <string name="htMPhone">Mobile Phone</string>
    <string name="htEmail">Email Address</string>
    <string name="htAddress">Address</string>
    <string name="htSQns">Secret Question</string>
    <string name="htSAns">Secret Answer</string>
    <string name="btnReset">Reset</string>

    <string-array name="logoutArray">
        <item>Login/Register</item>
    </string-array>
    <string-array name="loginArray">
        <item>Profile</item>
        <item>Your Orders</item>
        <item>Reservations</item>
        <item>Wishlist</item>
        <item>Logout</item>
    </string-array>
    <string-array name="adminArray">
        <item>Welcome Admin</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="tvProfile">Profile</string>
    <string name="htOPwd">Old Password</string>
    <string name="htNPwd">New Password</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnUpdate">Update</string>
    <string name="etPName">Name</string>
    <string name="etPPrice">Price</string>
    <string name="etPQuantity">Quantity</string>
    <string name="etPDesc">Description</string>
    <string name="btnCreate">Create</string>
    <string name="btnUpdate">Update</string>

</resources>