<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:layout_marginTop="15dp"
        	android:layout_marginBottom="5dp"
        	android:textSize="30sp"
        	android:text="@string/tvLogin" />
            
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="@string/htUsername" />
            
        <EditText
            android:id="@+id/etPwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="textPassword"
            android:hint="@string/htPwd" />
    
    	<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:weightSum="1" >
        
        	<Button
            	android:id="@+id/btnClear"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:text="@string/btnClear" />
        
        	<Button
            	android:id="@+id/btnLogin"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:text="@string/btnLogin" />
        
    	</LinearLayout>
    
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:layout_marginTop="15dp"
        	android:textSize="20sp"
        	android:text="@string/tvOr" />
    	
    	<Button
       		android:id="@+id/btnRegister"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:text="@string/btnRegister" />

    </LinearLayout>
</ScrollView>