<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <FrameLayout
        android:id="@+id/flUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <LinearLayout
	        android:id="@+id/llMain"
	        android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >
        
        	<TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_gravity="center_horizontal"
        		android:layout_marginTop="15dp"
        		android:layout_marginBottom="5dp"
        		android:textSize="30sp"
       			android:text="@string/tvTodayDeal" />
        	
        	<GridView
    			android:id="@+id/gvToday"
    			android:layout_width="fill_parent" 
   				android:layout_height="wrap_content"
    			android:columnWidth="90dp"
    			android:numColumns="auto_fit"
    			android:verticalSpacing="10dp"
    			android:horizontalSpacing="10dp"
    			android:stretchMode="columnWidth"
    			android:gravity="center" />
        
        	<TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_gravity="center_horizontal"
        		android:layout_marginTop="15dp"
        		android:layout_marginBottom="5dp"
        		android:textSize="30sp"
       			android:text="@string/tvRecently" />
        	
        	<GridView
    			android:id="@+id/gvRecent"
    			android:layout_width="fill_parent" 
   				android:layout_height="wrap_content"
    			android:columnWidth="90dp"
    			android:numColumns="auto_fit"
    			android:verticalSpacing="10dp"
    			android:horizontalSpacing="10dp"
    			android:stretchMode="columnWidth"
    			android:gravity="center" />
        
        	<TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_gravity="center_horizontal"
        		android:layout_marginTop="15dp"
        		android:layout_marginBottom="5dp"
        		android:textSize="30sp"
       			android:text="@string/tvMost" />
        	
        	<GridView
    			android:id="@+id/gvMost"
    			android:layout_width="fill_parent" 
   				android:layout_height="wrap_content"
    			android:columnWidth="90dp"
    			android:numColumns="auto_fit"
    			android:verticalSpacing="10dp"
    			android:horizontalSpacing="10dp"
    			android:stretchMode="columnWidth"
    			android:gravity="center" />
        
    	</LinearLayout>
    	
        <LinearLayout
        	android:id="@+id/llCategory"
        	android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >
        
        	<GridView
    			android:id="@+id/gvCategory"
    			android:layout_width="fill_parent" 
   				android:layout_height="fill_parent"
    			android:columnWidth="90dp"
    			android:numColumns="auto_fit"
    			android:verticalSpacing="10dp"
    			android:horizontalSpacing="10dp"
    			android:stretchMode="columnWidth"
    			android:gravity="center" />
        
    	</LinearLayout>
    
    	<LinearLayout
        	android:id="@+id/llSearch"
        	android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >
        	
    	    <LinearLayout
        		android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:orientation="horizontal"
    			android:weightSum="1" >
        	
    	    	<EditText
    	        	android:layout_width="0dp"
        			android:layout_height="wrap_content"
        			android:layout_marginTop="15dp"
        			android:layout_marginBottom="5dp"
        			android:layout_weight="0.8"
        			android:hint="@string/etSearch" />
    	    	
    	    	<Button
    	    	    android:id="@+id/btnSearch"
    	    	    android:layout_width="0dp"
        			android:layout_height="wrap_content"
        			android:layout_marginTop="15dp"
        			android:layout_marginBottom="5dp"
        			android:layout_weight="0.2"
        			android:text="@string/tvSearch" />
    	    
    	    </LinearLayout>
        
    	</LinearLayout>
    
    </FrameLayout>
    
    <FrameLayout
        android:id="@+id/flAdmin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
       	<LinearLayout
        	android:id="@+id/llCProduct"
        	android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >
    	    
       	    <LinearLayout
       	        android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:orientation="horizontal"
    			android:weightSum="1" >
       	        
       	        <ImageButton
       	        	android:id="@+id/ibPImage"
        			android:layout_width="0dp"
    				android:layout_height="300dp"
    				android:layout_weight="0.5" />
       	    
       	    	<LinearLayout
        			android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:orientation="vertical"
    				android:layout_weight="0.5" >
    	    	
       	        	<EditText
       	           		android:id="@+id/etPName"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPName" />
       	        
       	        	<Spinner
       	            	android:id="@+id/spCategory"
        				android:layout_width="match_parent"
        				android:layout_height="wrap_content" />
       	        
       	        	<EditText
       	            	android:id="@+id/etPPrice"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPPrice"
            			android:inputType="phone" />
       	        
       	        	<EditText
       	            	android:id="@+id/etPQuantity"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPQuantity"
            			android:inputType="phone" />
       	        
       	        	<EditText
       	           	 	android:id="@+id/etPDesc"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPDesc"
            			android:singleLine="false"
            			android:lines="6"
            			android:maxLines="10"
            			android:scrollbars="vertical" />
    	    	
       	    	</LinearLayout>
       	    </LinearLayout>
       	    <LinearLayout
       	        android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:orientation="horizontal"
    			android:weightSum="1" >
       	        
       	        <Button
            		android:id="@+id/btnClear"
            		android:layout_width="0dp"
            		android:layout_height="wrap_content"
            		android:layout_weight="0.5"
            		android:layout_gravity="center"
            		android:text="@string/btnClear" />
       	        
       	        <Button
            		android:id="@+id/btnCreate"
            		android:layout_width="0dp"
            		android:layout_height="wrap_content"
            		android:layout_weight="0.5"
            		android:layout_gravity="center"
            		android:text="@string/btnCreate" />
       	        
       	    </LinearLayout>
    	</LinearLayout>
    	
       	<LinearLayout
        	android:id="@+id/llUProduct"
        	android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >
       	    
       	    <LinearLayout
       	        android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:orientation="horizontal"
    			android:weightSum="1" >
       	        
       	        <Spinner
       	            android:id="@+id/spRCategory"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content"
        			android:layout_weight="0.5" />
       	        
       	        <Spinner
       	            android:id="@+id/spRName"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content"
        			android:layout_weight="0.5" />
       	        
       	    </LinearLayout>
       	    
       	    <LinearLayout
       	        android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:orientation="horizontal"
    			android:weightSum="1" >
       	        
       	        <ImageButton
       	        	android:id="@+id/ibUImage"
        			android:layout_width="0dp"
    				android:layout_height="300dp"
    				android:layout_weight="0.5" />
       	    
       	    	<LinearLayout
        			android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:orientation="vertical"
    				android:layout_weight="0.5" >
    	    	
       	        	<EditText
       	            	android:id="@+id/etUName"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPName" />
       	        
       	        	<Spinner
       	            	android:id="@+id/spUCategory"
        				android:layout_width="match_parent"
        				android:layout_height="wrap_content" />
       	        
       	        	<EditText
       	            	android:id="@+id/etUPrice"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPPrice"
            			android:inputType="phone" />
       	        
       	        	<EditText
       	           	 	android:id="@+id/etUQuantity"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPQuantity"
            			android:inputType="phone" />
       	        
       	       	 	<EditText
       	           	 	android:id="@+id/etUDesc"
       	            	android:layout_width="match_parent"
    	    			android:layout_height="wrap_content"
            			android:ems="5"
            			android:hint="@string/etPDesc"
            			android:singleLine="false"
            			android:lines="6"
            			android:maxLines="10"
            			android:scrollbars="vertical" />
    	    	
       	    	</LinearLayout>
       	    </LinearLayout>
       	    <LinearLayout
       	        android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:orientation="horizontal"
    			android:weightSum="1" >
       	        
       	        <Button
            		android:id="@+id/btnReset"
            		android:layout_width="0dp"
            		android:layout_height="wrap_content"
            		android:layout_weight="0.5"
            		android:layout_gravity="center"
            		android:text="@string/btnReset" />
       	        
       	        <Button
            		android:id="@+id/btnUpdate"
            		android:layout_width="0dp"
            		android:layout_height="wrap_content"
            		android:layout_weight="0.5"
            		android:layout_gravity="center"
            		android:text="@string/btnUpdate" />
       	        
       	    </LinearLayout>
    	</LinearLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111" />
</android.support.v4.widget.DrawerLayout>